package com.max.interfaces;

public interface MusicPlayer {
    void play();
    void pause();
    void next();
    void previous();
    void search(String search);
}
