package com.max.interfaces;

public interface Phone {

    void call(String number);

    void pickUpCall();

    void declineCall();

}
