package com.max.interfaces;

public interface WebBrowser {

    void newTab();
    void accessUrl(String url);

    void refreshPage();

}
